fix: 冗長なlockを削除